docs: DLT-2002 fix remaining modal scrollbar issues (#519)

--- a/apps/dialtone-documentation/docs/.vuepress/theme/assets/less/dialtone-docs.less
+++ b/apps/dialtone-documentation/docs/.vuepress/theme/assets/less/dialtone-docs.less
@@ -73,6 +73,12 @@ html body {
     box-shadow: var(--dt-shadow-large);
   }
 
+  // Override 'overflow: hidden' when algolia modal is showing because we are using
+  // dialtone scrollbar
+  &.DocSearch--active {
+    overflow: unset !important;
+  }
+
   .DocSearch-SearchBar {
     padding-bottom: var(--dt-space-550);
     border-bottom: 1px solid var(--dt-color-border-subtle);
